# s3_example

./: .example.env  .gitignore  alembic.ini  docker-compose.minio.yml  pyproject.toml  readme.md
app/application/models/: config.py
app/application/use_cases/: process_files.py
app/domain/file_info/: entities.py  gateway.py
app/domain/files/: entities.py  gateway.py
app/domain/files_gateway/: gateway.py
app/infrastructure/minio/: gateway.py
app/infrastructure/sqlalchemy_db/: gateway.py
app/infrastructure/sqlalchemy_db/database/: file_info.py
app/infrastructure/sqlalchemy_db/migrations/: env.py
app/infrastructure/sqlalchemy_db/migrations/versions/: 20250323-141159_bb4daba22dd3_added_initial_table.py  20250323-151158_60e4ede6dc14_refactor_file_info.py  20250323-151856_b39b566b237e_refactor_file_info.py
app/infrastructure/sqlalchemy_db/models/: __init__.py  file.py  file_info.py
app/main/: __init__.py  di.py  fastapi.py
app/presentation/fastapi/: index.py  root.py
